페이지 분리

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                 </ul>
               </li>
               <li>
-                <a href="room.html">Room</a>
+                <a href="room1f.html">Room</a>
                 <ul class="submenu">
-                  <li><a href="#">Reception</a></li>
-                  <li><a href="#">Private Room</a></li>
-                  <li><a href="#">Hall</a></li>
-                  <li><a href="#">Wedding/Party</a></li>
+                  <li><a href="room1f.html">Reception</a></li>
+                  <li><a href="room2f.html">Private Room</a></li>
+                  <li><a href="room3f.html">Hall</a></li>
+                  <li><a href="room4f.html">Wedding/Party</a></li>
                 </ul>
               </li>
               <!-- <li>
@@ -432,43 +432,43 @@
           </div>
         </section>
       </div>
+      <footer id="footer">
+        <div class="footer-wrap">
+          <div class="footimg">
+            <img src="./img/logo_f.png" alt="">
+          </div>
+          <div class="mobile-foot-logo">
+            <img src="./img/logo_on.png" alt="">
+          </div>
+          <div class="footer-info">
+            <p class="f-txt1">
+              "레스토랑 오늘은 한식문화의 가치를 연구하고<br class="mobile"> 특별한 경험을 소개하기 위해
+              행복에프앤씨재단에서 운영하는 <br class="mobile"> 한식 다이닝 레스토랑입니다."
+            </p><br>
+            <p class="f-txt2">
+              "O’neul is a Korean dining restaurant operated<br class="mobile">by Happy F&C Foundation that strives to
+              research true values of<br class="mobile">Korean food culture and spread its unique and special experience."
+            </p>
+            <p class="copyright mt-20">
+              Copyright © 2020 The Happiness food and culture foundation all right reserved.
+            </p>
+            </div>
+            <div class="footer-right">
+              <a href="http://www.i-award.or.kr/Web/" target="_blank" class="fr-a"><img src="./img/finalist.png" alt="웹어워드"></a>
+              <a href="http://www.instagram.com/oneu1_restaurant/" target="_blank" class="fr-btn"></a>
+            </div>
+            <div id="site">
+            <select id="familysite">
+              <option value="0" disabled selected hidden>Family Site</option>
+              <option value="1">행복에프엔씨재단</option>
+            </select>
+            </div>
+          </div>
+      </footer>
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
   </body>
-  <footer id="footer">
-    <div class="footer-wrap">
-      <div class="footimg">
-        <img src="./img/logo_f.png" alt="">
-      </div>
-      <div class="mobile-foot-logo">
-        <img src="./img/logo_on.png" alt="">
-      </div>
-      <div class="footer-info">
-        <p class="f-txt1">
-          "레스토랑 오늘은 한식문화의 가치를 연구하고<br class="mobile"> 특별한 경험을 소개하기 위해
-          행복에프앤씨재단에서 운영하는 <br class="mobile"> 한식 다이닝 레스토랑입니다."
-        </p><br>
-        <p class="f-txt2">
-          "O’neul is a Korean dining restaurant operated<br class="mobile">by Happy F&C Foundation that strives to
-          research true values of<br class="mobile">Korean food culture and spread its unique and special experience."
-        </p>
-        <p class="copyright mt-20">
-          Copyright © 2020 The Happiness food and culture foundation all right reserved.
-        </p>
-        </div>
-        <div class="footer-right">
-          <a href="http://www.i-award.or.kr/Web/" target="_blank" class="fr-a"><img src="./img/finalist.png" alt="웹어워드"></a>
-          <a href="http://www.instagram.com/oneu1_restaurant/" target="_blank" class="fr-btn"></a>
-        </div>
-        <div id="site">
-        <select id="familysite">
-          <option value="0" disabled selected hidden>Family Site</option>
-          <option value="1">행복에프엔씨재단</option>
-        </select>
-        </div>
-      </div>
-  </footer>
 </html>
