--- a/room1f.html
+++ b/room1f.html
@@ -47,7 +47,7 @@
               </ul>
             </li>
             <li>
-              <a href="#">Menu</a>
+              <a href="menu.html">Menu</a>
               <ul class="submenu">
                 <li><a href="menu.html">Luncheon</a></li>
                 <li><a href="menu.html">Dinner</a></li>
@@ -65,12 +65,12 @@
               </ul>
             </li>
             <li>
-              <a href="#">Room</a>
+              <a href="room1f.html">Room</a>
               <ul class="submenu">
-                <li><a href="#">Reception</a></li>
-                <li><a href="#">Private Room</a></li>
-                <li><a href="#">Hall</a></li>
-                <li><a href="#">Wedding/Party</a></li>
+                <li><a href="room1f.html">Reception</a></li>
+                <li><a href="room2f.html">Private Room</a></li>
+                <li><a href="room3f.html">Hall</a></li>
+                <li><a href="room4f.html">Wedding/Party</a></li>
               </ul>
             </li>
             <!-- <li>
@@ -106,16 +106,16 @@
     <div id="content">
       <div id="sub-menu">
       <aside id="main-aside">
-        <input type="radio" id="first" name="tab" checked>
-        <input type="radio" id="second" name="tab">
-        <input type="radio" id="third" name="tab">
-        <input type="radio" id="fourth" name="tab">
+        <input type="radio" id="first" name="tab" class="tabInput" value="1" checked>
+        <input type="radio" id="second" name="tab" class="tabInput" value="2">
+        <input type="radio" id="third" name="tab" class="tabInput" value="3">
+        <input type="radio" id="fourth" name="tab" class="tabInput" value="4">
         <div class="button-wrap">
           <section class="buttons">
-            <label for="first" class="Montserrat-font fs-22">1F</label>
-            <label for="second" class="Montserrat-font fs-22">2F</label>
-            <label for="third" class="Montserrat-font fs-22">3F</label>
-            <label for="fourth" class="Montserrat-font fs-22">Wedding / Party</label>
+            <label for="first" class="Montserrat-font fs-22 text-color-01"><a href="room.html" class="text-color-01">1F</a></label>
+            <label for="second" class="Montserrat-font fs-22"><a href="2froom.html">2F</a></label>
+            <label for="third" class="Montserrat-font fs-22"><a href="3froom.html">3F</a></label>
+            <label for="fourth" class="Montserrat-font fs-22"><a href="4froom.html">Wedding / Party</a></label>
           </section>
         </div>
         <div class="tab_item">
@@ -126,15 +126,15 @@
                 <h2 class="fs-52 montaga-font">Reception</h2>
               </div>
             </div>
-            <div class="swiper-container firstSwiper">
+            <div class="swiper-container firstSwiper swiper-container-initialized swiper-container-horizontal" id="swiper1">
               <div class="swiper-wrapper">
-                <div data-hash="slide1" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room01_01.jpg" alt="room1">
                 </div>
-                <div data-hash="slide2" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room01_02.jpg" alt="room1">
                 </div>
-                <div data-hash="slide3" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room01_03.jpg" alt="room1">
                 </div>
               </div>
@@ -148,7 +148,7 @@
             </div>
           </div>
         </div>
-        <!-- <script type="text/javascript">
+        <script type="text/javascript">
         $(function(){
           let roomSwiper = new Swiper(".firstSwiper", {
             slidesPerView: 1,
@@ -170,7 +170,7 @@
             },
           });
         })
-        </script> -->
+        </script>
         <div class="tab_item">
           <div class="room2">
             <div class="f1">
@@ -179,18 +179,18 @@
                 <h2 class="fs-52 montaga-font">Private Dining Room</h2>
               </div>
             </div>
-            <div class="swiper-container secondSwiper">
+            <div class="swiper-container firstSwiper swiper-container-initialized swiper-container-horizontal" id="swiper2">
               <div class="swiper-wrapper">
-                <div data-hash="slide4" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room02_01.jpg" alt="room2">
                 </div>
-                <div data-hash="slide5" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room02_02.jpg" alt="room2">
                 </div>
-                <div data-hash="slide6" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room02_03.jpg" alt="room2">
                 </div>
-                <div data-hash="slide7" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room02_04.jpg" alt="room2">
                 </div>
               </div>
@@ -204,7 +204,7 @@
             </div>
           </div>
         </div>
-        <!-- <script type="text/javascript">
+        <script type="text/javascript">
         $(function(){
           let secondSwiper = new Swiper(".secondSwiper", {
             slidesPerView: 1,
@@ -226,7 +226,7 @@
             },
           });
         })
-        </script> -->
+        </script>
         <div class="tab_item">
           <div class="room3">
             <div class="f1">
@@ -235,24 +235,24 @@
                 <h2 class="fs-52 montaga-font">Hall, Courtyard, Lobby</h2>
               </div>
             </div>
-            <div class="swiper-container thirdSwiper">
+            <div class="swiper-container firstSwiper swiper-container-initialized swiper-container-horizontal" id="swiper3">
               <div class="swiper-wrapper">
-                <div data-hash="slide8" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room03_01.jpg" alt="room3">
                 </div>
-                <div data-hash="slide9" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room03_02.jpg" alt="room3">
                 </div>
-                <div data-hash="slide10" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room03_03.jpg" alt="room3">
                 </div>
-                <div data-hash="slide11" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room03_04.jpg" alt="room3">
                 </div>
-                <div data-hash="slide12" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room03_05.jpg" alt="room3">
                 </div>
-                <div data-hash="slide13" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room03_06.jpg" alt="room3">
                 </div>
               </div>
@@ -266,7 +266,7 @@
             </div>
           </div>
         </div>
-        <!-- <script type="text/javascript">
+        <script type="text/javascript">
         $(function(){
           let thirdSwiper = new Swiper(".thirdSwiper", {
             slidesPerView: 1,
@@ -288,7 +288,7 @@
             },
           });
         })
-        </script> -->
+        </script>
         <div class="tab_item">
           <div class="room4">
             <div class="f1">
@@ -297,33 +297,33 @@
                 <h2 class="fs-52 montaga-font">Wedding / Party</h2>
               </div>
             </div>
-            <div class="swiper-container fourthSwiper">
+            <div class="swiper-container firstSwiper swiper-container-initialized swiper-container-horizontal" id="swiper4">
               <div class="swiper-wrapper">
-                <div data-hash="slide14" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room04_01.jpg" alt="room4">
                 </div>
-                <div data-hash="slide15" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room04_02.jpg" alt="room4">
                 </div>
-                <div data-hash="slide16" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room04_03.jpg" alt="room4">
                 </div>
-                <div data-hash="slide17" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room04_04.jpg" alt="room4">
                 </div>
-                <div data-hash="slide18" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room04_05.jpg" alt="room4">
                 </div>
-                <div data-hash="slide19" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room04_06.jpg" alt="room4">
                 </div>
-                <div data-hash="slide20" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room04_07.jpg" alt="room4">
                 </div>
-                <div data-hash="slide21" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room04_08.jpg" alt="room4">
                 </div>
-                <div data-hash="slide22" class="swiper-slide">
+                <div class="swiper-slide">
                   <img src="./img/room/room04_09.jpg" alt="room4">
                 </div>
               </div>
@@ -363,7 +363,7 @@
             </div>
           </div>
         </div>
-        <!-- <script type="text/javascript">
+        <script type="text/javascript">
         $(function(){
           let fourthSwiper = new Swiper(".fourthSwiper", {
             slidesPerView: 1,
@@ -385,47 +385,47 @@
             },
           });
         })
-        </script> -->
+        </script>
       </aside>
      </div>
     </div>
+    <footer id="footer">
+      <div class="footer-wrap">
+        <div class="footimg">
+          <img src="./img/logo_f.png" alt="">
+        </div>
+        <div class="mobile-foot-logo">
+          <img src="./img/logo_on.png" alt="">
+        </div>
+        <div class="footer-info">
+          <p class="f-txt1">
+            "레스토랑 오늘은 한식문화의 가치를 연구하고<br class="mobile"> 특별한 경험을 소개하기 위해
+            행복에프앤씨재단에서 운영하는 <br class="mobile"> 한식 다이닝 레스토랑입니다."
+          </p><br>
+          <p class="f-txt2">
+            "O’neul is a Korean dining restaurant operated<br class="mobile">by Happy F&C Foundation that strives to
+            research true values of<br class="mobile">Korean food culture and spread its unique and special experience."
+          </p>
+          <p class="copyright mt-20">
+            Copyright © 2020 The Happiness food and culture foundation all right reserved.
+          </p>
+          </div>
+          <div class="footer-right">
+            <a href="http://www.i-award.or.kr/Web/" target="_blank" class="fr-a"><img src="./img/finalist.png" alt="웹어워드"></a>
+            <a href="http://www.instagram.com/oneu1_restaurant/" target="_blank" class="fr-btn"></a>
+          </div>
+          <div id="site">
+          <select id="familysite">
+            <option value="0" disabled selected hidden>Family Site</option>
+            <option value="1">행복에프엔씨재단</option>
+          </select>
+          </div>
+        </div>
+    </footer>
   </div>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
 AOS.init();
 </script>
 </body>
-<footer id="footer">
-  <div class="footer-wrap">
-    <div class="footimg">
-      <img src="./img/logo_f.png" alt="">
-    </div>
-    <div class="mobile-foot-logo">
-      <img src="./img/logo_on.png" alt="">
-    </div>
-    <div class="footer-info">
-      <p class="f-txt1">
-        "레스토랑 오늘은 한식문화의 가치를 연구하고<br class="mobile"> 특별한 경험을 소개하기 위해
-        행복에프앤씨재단에서 운영하는 <br class="mobile"> 한식 다이닝 레스토랑입니다."
-      </p><br>
-      <p class="f-txt2">
-        "O’neul is a Korean dining restaurant operated<br class="mobile">by Happy F&C Foundation that strives to
-        research true values of<br class="mobile">Korean food culture and spread its unique and special experience."
-      </p>
-      <p class="copyright mt-20">
-        Copyright © 2020 The Happiness food and culture foundation all right reserved.
-      </p>
-      </div>
-      <div class="footer-right">
-        <a href="http://www.i-award.or.kr/Web/" target="_blank" class="fr-a"><img src="./img/finalist.png" alt="웹어워드"></a>
-        <a href="http://www.instagram.com/oneu1_restaurant/" target="_blank" class="fr-btn"></a>
-      </div>
-      <div id="site">
-      <select id="familysite">
-        <option value="0" disabled selected hidden>Family Site</option>
-        <option value="1">행복에프엔씨재단</option>
-      </select>
-      </div>
-    </div>
-</footer>
 </html>
