메뉴 런치 미더어쿼리 작업

--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="./css/myinitial.css">
 <link rel="stylesheet" href="./css/swiper.min.css">
 <link rel="stylesheet" href="./css/menustyle.css">
+<link rel="stylesheet" href="./css/media.css">
 <link rel="stylesheet" href="./css/menumedia.css">
 <script type="text/javascript" src="./js/jquery_3.5.1.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
@@ -114,8 +115,8 @@
       <div class="button-wrap">
         <section class="buttons">
           <label for="first" class="Montserrat-font fs-22 lun">Luncheon</label>
-          <label for="second" class="Montserrat-font fs-22">Dinner</label>
-          <label for="third" class="Montserrat-font fs-22">Wedding / Party</label>
+          <label for="second" class="Montserrat-font fs-22 din">Dinner</label>
+          <label for="third" class="Montserrat-font fs-22 par">Wedding / Party</label>
           <label for="fourth" class="Montserrat-font fs-22 wine">Signature wine</label>
         </section>
       </div>
