--- a/room2f.html
+++ b/room2f.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="./css/myinitial.css">
 <link rel="stylesheet" href="./css/swiper.min.css">
 <link rel="stylesheet" href="./css/roomstyle.css">
+<link rel="stylesheet" href="./css/media.css">
 <link rel="stylesheet" href="./css/roommedia.css">
 <script type="text/javascript" src="./js/jquery_3.5.1.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
@@ -99,7 +100,7 @@
       <div class="main-bg">
         <div class="main-text">
           <p class="fs-16 Montserrat-font .letter">Restaurant o'neul</p>
-          <p class="fs-60 montaga-font">o'neul Menu</p>
+          <p class="fs-60 montaga-font">o'neul Room</p>
         </div>
       </div>
     </div>
