줄 바꿈 변경

--- a/menu.html
+++ b/menu.html
@@ -122,7 +122,7 @@
       </div>
       <div class="tab-item" data-aos="fade-up" data-aos-duration="3000">
         <div class="tab-title">
-          <h2 class="fs-22 Noto-font">2021 봄메뉴는 봄 그리고 발효를 주제로<br>식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</h2>
+          <h2 class="fs-22 Noto-font">2021 봄메뉴는 봄 그리고 발효를 주제로<br class="mobile">식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</h2>
         </div>
         <div class="lun-menu">
           <div class="lun-img">
@@ -189,7 +189,7 @@
       </div>
       <div class="tab-item" data-aos="fade-up" data-aos-duration="3000">
         <div class="tab-title">
-          <h2 class="fs-22 Noto-font">2021 봄메뉴는 봄 그리고 발효를 주제로<br>식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</h2>
+          <h2 class="fs-22 Noto-font">2021 봄메뉴는 봄 그리고 발효를 주제로<br class="mobile"> 식문화 연구를 통해 레스토랑 오늘만의 차별화된 메뉴로 구성하여 제공합니다.</h2>
         </div>
         <div class="dinner-menu">
           <div class="dinner-img">
