인포 정보 수정

--- a/menu.html
+++ b/menu.html
@@ -180,7 +180,7 @@
             </div>
             <ul>
               <li class="fs-18"><a href="">특정 음식에 대해 알러지가 있으시거나 메뉴조정을 원하시면 레스토랑 오늘로 연락 해주세요.</a></li>
-              <li class="fs-18"><a href="">코스 메뉴의 식재료 변경을 희망하시면 말씀주세요. (예. 육류↔어류)</a></li>
+              <li class="fs-18"><a href="">코스 메뉴의 식재료 변경을 희망하시면 말씀주세요. (예. 육류 > 어류)</a></li>
               <li class="fs-18"><a href="">4인 이상 예약시 고객맞춤메뉴 제공 가능합니다. (최소 3일전까지 사전협의 시)</a></li>
               <p class="fs-16">Kindly advise us detailed information about food allergies or<br class="mobile">special requests in advance. Price include tax and service charge.</p>
             </ul>
@@ -242,7 +242,7 @@
             </div>
             <ul>
               <li class="fs-18"><a href="">특정 음식에 대해 알러지가 있으시거나 메뉴조정을 원하시면 레스토랑 오늘로 연락 해주세요.</a></li>
-              <li class="fs-18"><a href="">코스 메뉴의 식재료 변경을 희망하시면 말씀주세요. (예. 육류↔어류)</a></li>
+              <li class="fs-18"><a href="">코스 메뉴의 식재료 변경을 희망하시면 말씀주세요. (예. 육류 > 어류)</a></li>
               <li class="fs-18"><a href="">4인 이상 예약시 고객맞춤메뉴 제공 가능합니다. (최소 3일전까지 사전협의 시)</a></li>
               <p class="fs-16">Kindly advise us detailed information about food allergies or<br class="mobile">special requests in advance. Price include tax and service charge.</p>
             </ul>
