메뉴 미디어쿼리 완성

--- a/menu.html
+++ b/menu.html
@@ -108,10 +108,10 @@
   <div id="content">
     <div id="sub-menu">
     <aside id="main-aside">
-      <input type="radio" id="first" name="tab" checked>
+      <input type="radio" id="first" name="tab">
       <input type="radio" id="second" name="tab">
       <input type="radio" id="third" name="tab">
-      <input type="radio" id="fourth" name="tab">
+      <input type="radio" id="fourth" name="tab" checked>
       <div class="button-wrap">
         <section class="buttons">
           <label for="first" class="Montserrat-font fs-22 lun">Luncheon</label>
@@ -258,8 +258,8 @@
                 <p class="fs-20 Montserrat-font">130,000 KRW ~</p>
               </div>
               <div class="party-text2">
-                <p class="fs-22 Noto-font">20인 이상 연회 진행 시 이벤트에 맞춘 코스/뷔페/케이터링 메뉴를 제공합니다.</p>
-                <p class="fs-16 .Montserrat-font">For a banquet of over 20 guests, we offer specialized course/buffet/catering menu options.</p>
+                <p class="fs-22 Noto-font">20인 이상 연회 진행 시 이벤트에 맞춘<br class="pc"> 코스/뷔페/케이터링 메뉴를 제공합니다.</p>
+                <p class="fs-16 .Montserrat-font">For a banquet of over 20 guests, <br class="pc">we offer specialized course/buffet/catering menu options.</p>
               </div>
               <div class="party-icon">
                 <ul>
@@ -324,7 +324,7 @@
                 <ul>
                   <li class="fs-18">주안상 : 활어초무침 또는 숙회, 촉촉 계란말이, 모둠부각</li>
                   <li class="fs-18">BBQ : 제주 흑돼지 삼겹살, 효모 숙성 닭다리살, LA갈비</li>
-                  <li class="fs-18">곁들임: 쌈야채, 구운야채, 김치, 파절이, 명이장아찌, 청량고추장아</li>
+                  <li class="fs-18">곁들임: 쌈야채, 구운야채, 김치, 파절이, 명이장아찌, 청량고추장아찌</li>
                   <li class="fs-18">식사 : 대구 매운탕 전골</li>
                   <li class="fs-18">후식 : 다과상과 아이스크림, 차 또는 커피</li>
                 </ul>
