룸 미디어 쿼리 적용

--- a/menu.html
+++ b/menu.html
@@ -99,7 +99,7 @@
     </div>
   <div id="mainbg">
     <div class="main-bg">
-      <div class="main-text">
+      <div class="main-text" data-aos="fadein" data-aos-duration="3000">
         <p class="fs-16 Montserrat-font .letter">Restaurant o'neul</p>
         <p class="fs-60 montaga-font">o'neul Menu</p>
       </div>
@@ -108,10 +108,10 @@
   <div id="content">
     <div id="sub-menu">
     <aside id="main-aside">
-      <input type="radio" id="first" name="tab">
+      <input type="radio" id="first" name="tab" checked>
       <input type="radio" id="second" name="tab">
       <input type="radio" id="third" name="tab">
-      <input type="radio" id="fourth" name="tab" checked>
+      <input type="radio" id="fourth" name="tab">
       <div class="button-wrap">
         <section class="buttons">
           <label for="first" class="Montserrat-font fs-22 lun">Luncheon</label>
