--- a/room2f.html
+++ b/room2f.html
@@ -98,7 +98,7 @@
     </div>
     <div id="mainbg">
       <div class="main-bg">
-        <div class="main-text">
+        <div class="main-text" data-aos="fadein" data-aos-duration="3000">
           <p class="fs-16 Montserrat-font .letter">Restaurant o'neul</p>
           <p class="fs-60 montaga-font">o'neul Room</p>
         </div>
@@ -113,10 +113,10 @@
         <input type="radio" id="fourth" name="tab" class="tabInput" value="4">
         <div class="button-wrap">
           <section class="buttons">
-            <label for="first" class="Montserrat-font fs-22"><a href="room.html">1F</a></label>
-            <label for="second" class="Montserrat-font fs-22 text-color-01"><a href="2froom.html" class="text-color-01">2F</a></label>
-            <label for="third" class="Montserrat-font fs-22"><a href="3froom.html">3F</a></label>
-            <label for="fourth" class="Montserrat-font fs-22"><a href="4froom.html">Wedding / Party</a></label>
+            <label for="first" class="Montserrat-font fs-22 lun"><a href="room1f.html">1F</a></label>
+            <label for="second" class="Montserrat-font fs-22 text-color-01 din"><a href="room2f.html" class="text-color-01">2F</a></label>
+            <label for="third" class="Montserrat-font fs-22 par"><a href="room3f.html">3F</a></label>
+            <label for="fourth" class="Montserrat-font fs-22 wine"><a href="room4f.html">Wedding / Party</a></label>
           </section>
         </div>
         <div class="tab_item">
@@ -173,7 +173,7 @@
         })
         </script>
         <div class="tab_item">
-          <div class="room2">
+          <div class="room2" data-aos="fade-up" data-aos-duration="3000">
             <div class="f1">
               <div class="room-text">
                 <p class="fs-22 montaga-font">2F</p>
@@ -199,7 +199,7 @@
               <div class="swiper-button-prev"></div>
               <div class="swiper-pagination"></div>
             </div>
-            <div class="roominfo">
+            <div class="roominfo" data-aos="fade-up" data-aos-duration="3000">
               <p class="fs-24 Noto-font ">레스토랑 오늘에서 고객을 맞이하는 공간</p>
               <p class="fs-20 Montserrat-font">Restaurant o’neul’s welcoming space</p>
             </div>
@@ -394,9 +394,6 @@
       <div class="footer-wrap">
         <div class="footimg">
           <img src="./img/logo_f.png" alt="">
-        </div>
-        <div class="mobile-foot-logo">
-          <img src="./img/logo_on.png" alt="">
         </div>
         <div class="footer-info">
           <p class="f-txt1">
