--- a/room4f.html
+++ b/room4f.html
@@ -98,7 +98,7 @@
     </div>
     <div id="mainbg">
       <div class="main-bg">
-        <div class="main-text">
+        <div class="main-text" data-aos="fadein" data-aos-duration="3000">
           <p class="fs-16 Montserrat-font .letter">Restaurant o'neul</p>
           <p class="fs-60 montaga-font">o'neul Room</p>
         </div>
@@ -113,10 +113,10 @@
         <input type="radio" id="fourth" name="tab" class="tabInput" value="4" checked>
         <div class="button-wrap">
           <section class="buttons">
-            <label for="first" class="Montserrat-font fs-22"><a href="room.html">1F</a></label>
-            <label for="second" class="Montserrat-font fs-22"><a href="2froom.html">2F</a></label>
-            <label for="third" class="Montserrat-font fs-22"><a href="3froom.html">3F</a></label>
-            <label for="fourth" class="Montserrat-font fs-22 text-color-01"><a href="4froom.html" class="text-color-01">Wedding / Party</a></label>
+            <label for="first" class="Montserrat-font fs-22 lun"><a href="room1f.html">1F</a></label>
+            <label for="second" class="Montserrat-font fs-22 din"><a href="room2f.html">2F</a></label>
+            <label for="third" class="Montserrat-font fs-22 par"><a href="room3f.html">3F</a></label>
+            <label for="fourth" class="Montserrat-font fs-22 text-color-01 wine"><a href="room4f.html" class="text-color-01">Wedding / Party</a></label>
           </section>
         </div>
         <div class="tab_item">
@@ -291,7 +291,7 @@
         })
         </script>
         <div class="tab_item">
-          <div class="room4">
+          <div class="room4" data-aos="fade-up" data-aos-duration="3000">
             <div class="f1">
               <div class="room-text">
                 <p class="fs-22 montaga-font">Roof Top</p>
@@ -332,11 +332,11 @@
               <div class="swiper-button-prev"></div>
               <div class="swiper-pagination"></div>
             </div>
-            <div class="roominfo">
+            <div class="roominfo" data-aos="fade-up" data-aos-duration="3000">
               <p class="fs-24 Noto-font">전통과 모던함이 어우러진 레스토랑 오늘에서<br class="mobile">이벤트 컨셉에 따라 공간을 다양하게 활용하여 이벤트 다이닝을 즐겨보세요.</p>
               <p class="fs-20 Montserrat-font">Restaurant o’neul is a harmony of modern and tradition. Our dining space can be customized in various configurations according to your event concept.</p>
             </div>
-            <div class="roominfo2">
+            <div class="roominfo2" data-aos="fade-up" data-aos-duration="3000">
               <div class="info-box">
                 <div class="info-icon">
                   <div class="info-img"><img src="./img/room/icon_wine.png" alt="icon"></div>
@@ -394,9 +394,6 @@
       <div class="footer-wrap">
         <div class="footimg">
           <img src="./img/logo_f.png" alt="">
-        </div>
-        <div class="mobile-foot-logo">
-          <img src="./img/logo_on.png" alt="">
         </div>
         <div class="footer-info">
           <p class="f-txt1">
