--- a/room1f.html
+++ b/room1f.html
@@ -33,13 +33,13 @@
     </label>
     <div class="header">
         <div class="mainlogo">
-          <a href="#"><img src="./img/logo.png" alt="logo"></a>
+          <a href="index.html"><img src="./img/logo.png" alt="logo"></a>
         </div>
         <div class="gnb">
           <label for="gnbcheck" id="mobile_close_btn"></label>
           <ul class="mainmenu">
             <li>
-              <a href="index.html">o'neul</a>
+              <a href="index.html#first">o'neul</a>
               <ul class="submenu">
                 <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                 <li><a href="#">&nbsp;&nbsp;</a></li>
@@ -57,7 +57,7 @@
               </ul>
             </li>
             <li>
-              <a href="index.html">People</a>
+              <a href="index.html#third">People</a>
               <ul class="submenu">
                 <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                 <li><a href="#">&nbsp;&nbsp;</a></li>
@@ -84,7 +84,7 @@
               </ul>
             </li> -->
             <li>
-              <a href="index.html">Reservation</a>
+              <a href="index.html#six">Reservation</a>
               <ul class="submenu">
                 <!-- <li><a href="#">&nbsp;&nbsp;</a></li>
                 <li><a href="#">&nbsp;&nbsp;</a></li>
