예약 페이지 추가

--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                 <i class="icon-plus">더보기</i>
               </span>
               <span class="menu-btn">
-                <span class="btn-1"><a href="#">봄 오찬</a>
+                <span class="btn-1"><a href="menu.html">봄 오찬</a>
                   <p>65,000 KRW</p>
                 </span>
-                <span class="btn-2"><a href="#">오늘 오찬</a>
+                <span class="btn-2"><a href="menu.html">오늘 오찬</a>
                   <p>78,000 KRW</p>
                 </span>
               </span>
@@ -207,10 +207,10 @@
                 <i class="icon-plus">더보기</i>
               </span>
               <span class="menu-btn">
-                <span class="btn-1"><a href="#">오늘 봄 한상</a>
+                <span class="btn-1"><a href="menu.html">오늘 봄 한상</a>
                   <p>150,000 KRW</p>
                 </span>
-                <span class="btn-2"><a href="#">오늘 셰프 스페셜 한상</a>
+                <span class="btn-2"><a href="menu.html">오늘 셰프 스페셜 한상</a>
                   <p>200,000 KRW</p>
                 </span>
               </span>
@@ -220,13 +220,13 @@
             <div class="menu1">
               <span class="menu-top">
                 <span class="menu-top01">Banquet / Party</span>
-                <i class="icon-plus">더보기</i>
+                <i class="icon-plus" href="menu.html">더보기</i>
               </span>
               <span class="menu-btn">
-                <span class="btn-1"><a href="#">맞춤 메뉴</a>
+                <span class="btn-1"><a href="menu.html">맞춤 메뉴</a>
                   <p>100,000 KRW ~</p>
                 </span>
-                <span class="btn-2"><a href="#">&nbsp;&nbsp;</a>
+                <span class="btn-2"><a href="menu.html">&nbsp;&nbsp;</a>
                 </span>
               </span>
             </div>
@@ -238,10 +238,10 @@
                 <i class="icon-plus">더보기</i>
               </span>
               <span class="menu-btn">
-                <span class="btn-1"><a href="#">샴페인</a>
+                <span class="btn-1"><a href="menu.html">샴페인</a>
                   <p>95,000 KRW ~</p>
                 </span>
-                <span class="btn-2"><a href="#">한국전통주</a>
+                <span class="btn-2"><a href="menu.html">한국전통주</a>
                   <p>70,000 KRW ~</p>
                 </span>
               </span>
@@ -342,6 +342,7 @@
         <div class="info-wrap">
           <div class="info-img">
             <img src="./img/mi_bg.jpg" alt="img">
+            <button type="button" name="button"><a href="reserform.html">레스토랑 오늘 예약하기</a></button>
           </div>
           <div class="info-alltext">
             <p class="fw-400">레스토랑 오늘</p>
