--- a/reserform.html
+++ b/reserform.html
@@ -22,7 +22,10 @@
           <span class="fs-20">전화번호  </span><input type="tel" name="tel" placeholder="010-****-****" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}"><br>
           <span class="fs-20">예약 희망일  </span><input type="date" name="date" min="2021-05-25"><br>
           <span class="fs-20">예약 시간  </span><input type="time" name="time" min="09:00" max="19:00"><br>
-          <input type="submit" class="submit" name="" value="예약하기">
+          <div class="btn">
+            <button type="submit"><a href="index.html#six">예약하기</a></button>
+            <button type="cancel" class="cancel"><a href="index.html#six">취소하기</a></button>
+          </div>
         </form>
       </div>
       </div>
