--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <div class="info-wrap">
           <div class="info-img">
             <img src="./img/mi_bg.jpg" alt="img">
-            <button type="button" name="button"><a href="reserform.html">레스토랑 오늘 예약하기</a></button>
+            <button type="button" onclick="window.open('reserform.html','window_name','width=800,height=800,location=no,status=no,scrollbars=yes');" name="button">레스토랑 오늘 예약하기</button>
           </div>
           <div class="info-alltext">
             <p class="fw-400">레스토랑 오늘</p>
