팝업창 수정

--- a/reserform.html
+++ b/reserform.html
@@ -15,8 +15,8 @@
     <div class="reser">
       <div class="reser-img">
       <div class="reser-text">
-        <h1 class="montaga-font fs-40">Restaurant o'neul</h1>
-        <p class="montaga-font fs-24">reservation</p>
+        <h1 class="montaga-font">Restaurant o'neul</h1>
+        <p class="montaga-font">reservation</p>
         <form class="reservation" action="index.html" method="post">
           <span class="fs-20">성명  </span><input type="text" name="" value=""><br>
           <span class="fs-20">전화번호  </span><input type="tel" name="tel" placeholder="010-****-****" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}"><br>
