--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="./js/jquery_3.5.1.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script type="text/javascript" src="./js/swiper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script type="text/javascript" src="./js/common.js"></script>
   <!--[if lt IE 9]>
   <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -342,7 +343,6 @@
         <div class="info-wrap">
           <div class="info-img">
             <img src="./img/mi_bg.jpg" alt="img">
-            <button type="button" onclick="window.open('reserform.html','window_name','width=600,height=600,location=no,status=no,scrollbars=yes');" name="button">레스토랑 오늘 예약하기</button>
           </div>
           <div class="info-alltext">
             <p class="fw-400">레스토랑 오늘</p>
@@ -374,6 +374,29 @@
                 <span>(일요일 휴무, Closed on Sunday)</span>
               </div>
             </div>
+            <div id="ex1" class="modal">
+              <div class="reser-wrap">
+                <div class="reser">
+                  <div class="reser-img">
+                  <div class="reser-text">
+                    <h1 class="montaga-font">Restaurant o'neul</h1>
+                    <p class="montaga-font">reservation</p>
+                    <form class="reservation" action="index.html" method="post">
+                      <span class="fs-20">성명  </span><input type="text" name="" value=""><br>
+                      <span class="fs-20">전화번호  </span><input type="tel" name="tel" placeholder="010-****-****" pattern="[0-9]{3}-[0-9]{4}-[0-9]{4}"><br>
+                      <span class="fs-20">예약 희망일  </span><input type="date" name="date" min="2021-05-25"><br>
+                      <span class="fs-20">예약 시간  </span><input type="time" name="time" min="09:00" max="19:00"><br>
+                      <div class="btn">
+                        <button type="submit" onclick="self.close()"><a href="">예약하기</a></button>
+                        <button type="cancel" class="cancel" onclick="self.close()"><a href="">취소하기</a></button>
+                      </div>
+                    </form>
+                  </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p class="fs-24"><a href="#ex1" rel="modal:open" class="button">레스토랑 오늘 예약하기</a></p>
           </div>
         </div>
       </section>
@@ -406,12 +429,14 @@
         <div id="site">
           <select id="familysite">
             <option value="0" disabled selected hidden>Family Site</option>
-            <option value="1">행복에프엔씨재단</option>
+            <option value="1" class="family1">행복에프엔씨재단</option>
           </select>
         </div>
       </div>
     </footer>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
