--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/myinitial.css">
   <link rel="stylesheet" href="./css/swiper.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/menustyle.css">
   <link rel="stylesheet" href="./css/media.css">
   <link rel="stylesheet" href="./css/menumedia.css">
