--- a/room2f.html
+++ b/room2f.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./css/myinitial.css">
 <link rel="stylesheet" href="./css/swiper.min.css">
+<link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="./css/roomstyle.css">
 <link rel="stylesheet" href="./css/media.css">
 <link rel="stylesheet" href="./css/roommedia.css">
